@@ -1,6 +1,8 @@
 0.6
 
    -  Rust 1.60 or later is now required to build this package.
+   -  From<Rational> and From<SRational> implementations for f32 and f64
+      have been removed.  Use Rational::to_f64 and so on.
 
 0.5.5 (2022-10-22)
 
